Correct elementMatches filter for datalist.options

The filter should match all option elements [1], even if they are empty
or disabled. This patch fixes the filter and ensures that the tests in
[2] pass.

All callers have been updated to filter on empty and disabled values,
except for the call from V8HTMLDataListElement.

The `fast/forms/datalist/datalist.html` test was removed as the correct
behavior is checked by
`wpt/html/semantics/forms/the-datalist-element/datalistoptions.html`.

[1] - https://html.spec.whatwg.org/multipage/forms.html#dom-datalist-options
[2] - http://w3c-test.org/html/semantics/forms/the-datalist-element/datalistoptions.html

BUG=687073
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2746823002
Cr-Commit-Position: refs/heads/master@{#456586}

Former-commit-id: d08576a42a3c298ce3b8a39f92f58440446e303d